@@ -1,3 +1,8 @@
+2025-04-11 Gabriele Gorla <gorlik@yahoo.com>
+
+  	* src/mos6502/gen.c:
+  	  Fix issue in genPointerGet when both left and result are XA.
+
 2025-04-06 Gabriele Gorla <gorlik@yahoo.com>
 
   	* src/mos6502/gen.c:
